--- a/css/style.css
+++ b/css/style.css
@@ -213,9 +213,10 @@ body::after {
 }
 
 .logo-img {
-    width: 150px;
-    height: auto;
-    border-radius: 50%;
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 50% !important;
+    object-fit: cover !important;
     margin-bottom: 10px;
 }
 
